Colors fixed in dark mode/light mode

--- a/static/main.css
+++ b/static/main.css
@@ -80,8 +80,13 @@ a:hover:after{
     font-size: 16px;
 }
 .title{
-    background-color: white;
+    color: white;
+    background-color: black;
     border-style: none
+}
+
+li {
+    color: white;
 }
 
 textarea {
